[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/tiles/letterO.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/letterE.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/letterN.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/letterI.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/letterL.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/letterT.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/letterA.png" type="Texture" id=7]
[ext_resource path="res://assets/tiles/letterM.png" type="Texture" id=8]
[ext_resource path="res://assets/tiles/letterG.png" type="Texture" id=9]
[ext_resource path="res://assets/tiles/letterD.png" type="Texture" id=10]
[ext_resource path="res://assets/tiles/letterS.png" type="Texture" id=11]
[ext_resource path="res://assets/tiles/letterR.png" type="Texture" id=12]
[ext_resource path="res://assets/tiles/letterV.png" type="Texture" id=13]
[ext_resource path="res://assets/tiles/letterC.png" type="Texture" id=14]
[ext_resource path="res://assets/tiles/letterP.png" type="Texture" id=15]
[ext_resource path="res://assets/tiles/letterY.png" type="Texture" id=16]
[ext_resource path="res://assets/tiles/letterH.png" type="Texture" id=17]
[ext_resource path="res://assets/tiles/letterK.png" type="Texture" id=18]
[ext_resource path="res://extras/MouseClick.tscn" type="PackedScene" id=19]
[ext_resource path="res://menu/ButtonCredits1.gd" type="Script" id=20]
[ext_resource path="res://assets/tiles/letterU.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 88, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 24 )

[node name="ButtonCredits1" type="Node2D"]
script = ExtResource( 20 )

[node name="Design" type="Node2D" parent="."]

[node name="Title" type="Node2D" parent="Design"]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )

[node name="LetterG" type="Sprite" parent="Design/Title"]
position = Vector2( 8, 8 )
texture = ExtResource( 9 )

[node name="LetterA" type="Sprite" parent="Design/Title"]
position = Vector2( 24, 8 )
texture = ExtResource( 7 )

[node name="LetterM" type="Sprite" parent="Design/Title"]
position = Vector2( 40, 8 )
texture = ExtResource( 8 )

[node name="LetterE" type="Sprite" parent="Design/Title"]
position = Vector2( 56, 8 )
texture = ExtResource( 2 )

[node name="LetterD" type="Sprite" parent="Design/Title"]
position = Vector2( 88, 8 )
texture = ExtResource( 10 )

[node name="LetterE2" type="Sprite" parent="Design/Title"]
position = Vector2( 104, 8 )
texture = ExtResource( 2 )

[node name="LetterS" type="Sprite" parent="Design/Title"]
position = Vector2( 120, 8 )
texture = ExtResource( 11 )

[node name="LetterI" type="Sprite" parent="Design/Title"]
position = Vector2( 136, 8 )
texture = ExtResource( 4 )

[node name="LetterG2" type="Sprite" parent="Design/Title"]
position = Vector2( 152, 8 )
texture = ExtResource( 9 )

[node name="LetterN" type="Sprite" parent="Design/Title"]
position = Vector2( 168, 8 )
texture = ExtResource( 3 )

[node name="Credit1" type="Node2D" parent="Design"]
modulate = Color( 1.96, 1.68, 0.22, 1 )

[node name="LetterA" type="Sprite" parent="Design/Credit1"]
position = Vector2( 40, 24 )
texture = ExtResource( 7 )

[node name="LetterR" type="Sprite" parent="Design/Credit1"]
position = Vector2( 56, 24 )
texture = ExtResource( 12 )

[node name="LetterT" type="Sprite" parent="Design/Credit1"]
position = Vector2( 72, 24 )
texture = ExtResource( 6 )

[node name="LetterI" type="Sprite" parent="Design/Credit1"]
position = Vector2( 88, 24 )
texture = ExtResource( 4 )

[node name="LetterN" type="Sprite" parent="Design/Credit1"]
position = Vector2( 104, 24 )
texture = ExtResource( 3 )

[node name="LetterD" type="Sprite" parent="Design/Credit1"]
position = Vector2( 120, 24 )
texture = ExtResource( 10 )

[node name="LetterI2" type="Sprite" parent="Design/Credit1"]
position = Vector2( 136, 24 )
texture = ExtResource( 4 )

[node name="Credit2" type="Node2D" parent="Design"]
modulate = Color( 1.96, 1.68, 0.22, 1 )

[node name="LetterV" type="Sprite" parent="Design/Credit2"]
position = Vector2( 32, 40 )
texture = ExtResource( 13 )

[node name="LetterO" type="Sprite" parent="Design/Credit2"]
position = Vector2( 48, 40 )
texture = ExtResource( 1 )

[node name="LetterL" type="Sprite" parent="Design/Credit2"]
position = Vector2( 64, 40 )
texture = ExtResource( 5 )

[node name="LetterA" type="Sprite" parent="Design/Credit2"]
position = Vector2( 80, 40 )
texture = ExtResource( 7 )

[node name="LetterT" type="Sprite" parent="Design/Credit2"]
position = Vector2( 96, 40 )
texture = ExtResource( 6 )

[node name="LetterI" type="Sprite" parent="Design/Credit2"]
position = Vector2( 112, 40 )
texture = ExtResource( 4 )

[node name="LetterL2" type="Sprite" parent="Design/Credit2"]
position = Vector2( 128, 40 )
texture = ExtResource( 5 )

[node name="LetterE" type="Sprite" parent="Design/Credit2"]
position = Vector2( 144, 40 )
texture = ExtResource( 2 )

[node name="Message" type="Node2D" parent="Design"]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )

[node name="LetterC" type="Sprite" parent="Design/Message"]
position = Vector2( 40, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 14 )

[node name="LetterO" type="Sprite" parent="Design/Message"]
position = Vector2( 56, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 1 )

[node name="LetterP" type="Sprite" parent="Design/Message"]
position = Vector2( 72, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 15 )

[node name="LetterI" type="Sprite" parent="Design/Message"]
position = Vector2( 88, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 4 )

[node name="LetterE" type="Sprite" parent="Design/Message"]
position = Vector2( 104, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 2 )

[node name="LetterD" type="Sprite" parent="Design/Message"]
position = Vector2( 120, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 10 )

[node name="LetterT2" type="Sprite" parent="Design/Message"]
position = Vector2( 168, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 6 )

[node name="LetterI2" type="Sprite" parent="Design/Message"]
position = Vector2( 152, 56.0702 )
rotation = 0.00881239
texture = ExtResource( 4 )

[node name="LetterI3" type="Sprite" parent="Design/Message"]
position = Vector2( 8, 56.0702 )
texture = ExtResource( 4 )

[node name="MouseClick" parent="Design" instance=ExtResource( 19 )]
position = Vector2( 0, 24 )

[node name="MouseClick2" parent="Design" instance=ExtResource( 19 )]
position = Vector2( 160, 24 )

[node name="Area2D" type="Area2D" parent="Design"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Design/Area2D"]
position = Vector2( 88, 32 )
shape = SubResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Title" type="Node2D" parent="Graphics"]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )

[node name="LetterG" type="Sprite" parent="Graphics/Title"]
position = Vector2( 32, 104 )
texture = ExtResource( 9 )

[node name="LetterR" type="Sprite" parent="Graphics/Title"]
position = Vector2( 48, 104 )
texture = ExtResource( 12 )

[node name="LetterA" type="Sprite" parent="Graphics/Title"]
position = Vector2( 64, 104 )
texture = ExtResource( 7 )

[node name="LetterP" type="Sprite" parent="Graphics/Title"]
position = Vector2( 80, 104 )
texture = ExtResource( 15 )

[node name="LetterH" type="Sprite" parent="Graphics/Title"]
position = Vector2( 96, 104 )
texture = ExtResource( 17 )

[node name="LetterI" type="Sprite" parent="Graphics/Title"]
position = Vector2( 112, 104 )
texture = ExtResource( 4 )

[node name="LetterS" type="Sprite" parent="Graphics/Title"]
position = Vector2( 144, 104 )
texture = ExtResource( 11 )

[node name="LetterC" type="Sprite" parent="Graphics/Title"]
position = Vector2( 128, 104 )
texture = ExtResource( 14 )

[node name="Credit" type="Node2D" parent="Graphics"]
modulate = Color( 1.96, 1.68, 0.22, 1 )

[node name="LetterK" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 48, 120 )
texture = ExtResource( 18 )

[node name="LetterE" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 64, 120 )
texture = ExtResource( 2 )

[node name="LetterN" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 80, 120 )
texture = ExtResource( 3 )

[node name="LetterN2" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 96, 120 )
texture = ExtResource( 3 )

[node name="LetterE2" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 112, 120 )
texture = ExtResource( 2 )

[node name="LetterY" type="Sprite" parent="Graphics/Credit"]
position = Vector2( 128, 120 )
texture = ExtResource( 16 )

[node name="MouseClick" parent="Graphics" instance=ExtResource( 19 )]
position = Vector2( 0, 104 )

[node name="MouseClick2" parent="Graphics" instance=ExtResource( 19 )]
position = Vector2( 160, 104 )

[node name="Area2D" type="Area2D" parent="Graphics"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/Area2D"]
position = Vector2( 88, 112 )
shape = SubResource( 2 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Title" type="Node2D" parent="Sounds"]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )

[node name="LetterS" type="Sprite" parent="Sounds/Title"]
position = Vector2( 48, 168 )
texture = ExtResource( 11 )

[node name="LetterO" type="Sprite" parent="Sounds/Title"]
position = Vector2( 64, 168 )
texture = ExtResource( 1 )

[node name="LetterU" type="Sprite" parent="Sounds/Title"]
position = Vector2( 80, 168 )
texture = ExtResource( 21 )

[node name="LetterN" type="Sprite" parent="Sounds/Title"]
position = Vector2( 96, 168 )
texture = ExtResource( 3 )

[node name="LetterD" type="Sprite" parent="Sounds/Title"]
position = Vector2( 112, 168 )
texture = ExtResource( 10 )

[node name="LetterS2" type="Sprite" parent="Sounds/Title"]
position = Vector2( 128, 168 )
texture = ExtResource( 11 )

[node name="Credit" type="Node2D" parent="Sounds"]
modulate = Color( 1.96, 1.68, 0.22, 1 )

[node name="LetterC" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 56, 184 )
texture = ExtResource( 14 )

[node name="LetterH" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 72, 184 )
texture = ExtResource( 17 )

[node name="LetterR" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 88, 184 )
texture = ExtResource( 12 )

[node name="LetterI" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 104, 184 )
texture = ExtResource( 4 )

[node name="LetterS" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 120, 184 )
texture = ExtResource( 11 )

[node name="LetterL" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 40, 200 )
texture = ExtResource( 5 )

[node name="LetterO" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 56, 200 )
texture = ExtResource( 1 )

[node name="LetterG" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 72, 200 )
texture = ExtResource( 9 )

[node name="LetterS2" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 88, 200 )
texture = ExtResource( 11 )

[node name="LetterD" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 104, 200 )
texture = ExtResource( 10 )

[node name="LetterO2" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 120, 200 )
texture = ExtResource( 1 )

[node name="LetterN" type="Sprite" parent="Sounds/Credit"]
position = Vector2( 136, 200 )
texture = ExtResource( 3 )

[node name="MouseClick" parent="Sounds" instance=ExtResource( 19 )]
position = Vector2( 0, 176 )

[node name="MouseClick2" parent="Sounds" instance=ExtResource( 19 )]
position = Vector2( 160, 176 )

[node name="Area2D" type="Area2D" parent="Sounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sounds/Area2D"]
position = Vector2( 88, 184 )
shape = SubResource( 3 )

[connection signal="mouse_entered" from="Design/Area2D" to="." method="_on_design_mouse_entered"]
[connection signal="mouse_exited" from="Design/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Graphics/Area2D" to="." method="_on_graphics_mouse_entered"]
[connection signal="mouse_exited" from="Graphics/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Sounds/Area2D" to="." method="_on_sounds_mouse_entered"]
